--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -11,7 +11,7 @@
                         <field name="prod_comment_ids" context="{'partner_id': active_id, }">
                             <tree string="Líneas" editable="top">
                                 <field name='product_id' />
-                                <field name='comment' />
+                                <field name='comments' />
                             </tree>
                         </field>   
                     </group>
