--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <xpath expr="//page[@name='internal_notes']" position="after">
-                <page string="Productos" groups="project.group_project_manager">
+                <page string="Productos">
                     <group colspan="2" >
                         <field name="prod_comment_ids" context="{'partner_id': active_id, }">
                             <tree string="Líneas" editable="top">
