--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -109,6 +109,7 @@
             
             <field name="vat" position="after">
                 <field name='ice' />
+                <field name='num_bailen' />
             </field>
             
             <button name="toggle_active" position="before">
@@ -128,6 +129,27 @@
             
         </field>
     </record>
+    
+    
+    
+    <record id="view_res_partner_eltete_short_form" model="ir.ui.view">
+        <field name="name">res.partner.eltete.short.form</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="arch" type="xml">
+            
+            
+            <field name="mobile" position="after">
+                <field name='carga' />
+            </field>
+            
+            
+            
+        </field>
+    </record>
+    
+    
+
     
    
     
