--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -49,33 +49,47 @@
 
 
     <record id="act_res_partner_2_sale_referencia_cliente" model="ir.actions.act_window">
-            <field name="name">Referencia cliente</field>
-            <field name="res_model">sale.referencia.cliente</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-            <field name="context">{'search_default_partner_id': active_id}</field>
-            <field name="groups_id" eval="[(4, ref('sales_team.group_sale_salesman'))]"/>
-            <field name="help" type="html">
-              <p class="o_view_nocontent_smiling_face">
-                Crea una nueva referencia cliente
-              </p>
-            </field>
-        </record>
+        <field name="name">Referencia cliente</field>
+        <field name="res_model">sale.referencia.cliente</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_partner_id': active_id}</field>
+        <field name="groups_id" eval="[(4, ref('sales_team.group_sale_salesman'))]"/>
+        <field name="help" type="html">
+          <p class="o_view_nocontent_smiling_face">
+            Crea una nueva referencia cliente
+          </p>
+        </field>
+    </record>
         
         
-        <record id="act_res_partner_2_sale_offer_oferta" model="ir.actions.act_window">
-            <field name="name">Detalle ofertas</field>
-            <field name="res_model">sale.offer.oferta</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-            <field name="context">{'search_default_partner_id': active_id}</field>
-            <field name="groups_id" eval="[(4, ref('sales_team.group_sale_salesman'))]"/>
-            <field name="help" type="html">
-              <p class="o_view_nocontent_smiling_face">
-                Crea una nueva oferta
-              </p>
-            </field>
-        </record>
+    <record id="act_res_partner_2_sale_offer_oferta" model="ir.actions.act_window">
+        <field name="name">Detalle ofertas</field>
+        <field name="res_model">sale.offer.oferta</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_partner_id': active_id}</field>
+        <field name="groups_id" eval="[(4, ref('sales_team.group_sale_salesman'))]"/>
+        <field name="help" type="html">
+          <p class="o_view_nocontent_smiling_face">
+            Crea una nueva oferta
+          </p>
+        </field>
+    </record>
+    
+    <record id="act_res_partner_2_sale_cotizacion" model="ir.actions.act_window">
+        <field name="name">Cotizaciones</field>
+        <field name="res_model">sale.cotizacion</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_partner_id': active_id}</field>
+        <field name="groups_id" eval="[(4, ref('sales_team.group_sale_salesman'))]"/>
+        <field name="help" type="html">
+          <p class="o_view_nocontent_smiling_face">
+            Crea una nueva cotización
+          </p>
+        </field>
+    </record>
 
 
 
@@ -113,41 +127,32 @@
             </field>
             
             <button name="toggle_active" position="before">
-                    <button class="oe_stat_button" type="action" name="%(act_res_partner_2_sale_referencia_cliente)d" 
-                        groups="sales_team.group_sale_salesman"
-                        attrs="{'invisible': [('customer', '=', False)]}"
-                        icon="fa-usd">
-                        <field string="Referencias" name="referencia_cliente_count" widget="statinfo"/>
-                    </button>
-                    <button class="oe_stat_button" type="action" name="%(act_res_partner_2_sale_offer_oferta)d" 
-                        groups="sales_team.group_sale_salesman"
-                        attrs="{'invisible': [('customer', '=', False)]}"
-                        icon="fa-usd">
-                        <field string="Det ofertas" name="sale_oferta_count" widget="statinfo"/>
-                    </button>
+                <button class="oe_stat_button" type="action" name="%(act_res_partner_2_sale_referencia_cliente)d" 
+                    groups="sales_team.group_sale_salesman"
+                    attrs="{'invisible': [('customer', '=', False)]}"
+                    icon="fa-usd">
+                    <field string="Referencias" name="referencia_cliente_count" widget="statinfo"/>
                 </button>
+                <!--<button class="oe_stat_button" type="action" name="%(act_res_partner_2_sale_offer_oferta)d" 
+                    groups="sales_team.group_sale_salesman"
+                    attrs="{'invisible': [('customer', '=', False)]}"
+                    icon="fa-usd">
+                    <field string="Det ofertas" name="sale_oferta_count" widget="statinfo"/>
+                </button>-->
+                <button class="oe_stat_button" type="action" name="%(act_res_partner_2_sale_cotizacion)d" 
+                    groups="sales_team.group_sale_salesman"
+                    attrs="{'invisible': [('customer', '=', False)]}"
+                    icon="fa-usd">
+                    <field string="Cotizaciones" name="sale_cotizacion_count" widget="statinfo"/>
+                </button>
+            </button>
             
         </field>
     </record>
     
     
     
-    <record id="view_res_partner_eltete_short_form" model="ir.ui.view">
-        <field name="name">res.partner.eltete.short.form</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
-        <field name="arch" type="xml">
-            
-            
-            <field name="mobile" position="after">
-                <field name='carga' />
-            </field>
-            
-            
-            
-        </field>
-    </record>
-    
+
     
 
     
