--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -96,6 +96,7 @@
                                 <field name='attribute_id' domain="[('referencia_cliente_id','=', referencia_cliente_id)]" />
                                 <field name='date' />
                                 <field name='npallets' />
+                                <field name="etipo"/>
                                 <field name='emetro' />
                                 <field name='eton' />
                                 <field name='state_id' />
@@ -176,6 +177,7 @@
                             <tree string="Ofertas" editable="top">
                                 <field name='date' />
                                 <field name='npallets' />
+                                <field name="etipo"/>
                                 <field name='emetro' />
                                 <field name='eton' />
                                 <field name='state_id' />
@@ -203,6 +205,7 @@
                     <field name="user_id"/>                    
                     <field name="date"/>
                     <field name="npallets"/>
+                    <field name="etipo"/>
                     <field name="emetro"/>
                     <field name="eton"/>
                     <field name="state_id"/>
