--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -123,6 +123,9 @@
             
             <field name="vat" position="after">
                 <field name='ice' />
+            </field>
+            
+            <field name="category_id" position="after">
                 <field name='num_bailen' />
             </field>
             
