--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -1,39 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!--<record id="view_product_template_eltete_form" model="ir.ui.view">
+    <record id="view_product_template_eltete_form" model="ir.ui.view">
         <field name="name">product.template.eltete.form</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='general_information']" position="after">
-                <page string="Atributos">
-                    
-                    <group colspan="2" >
-                        <field name='ala_1' attrs="{'readonly': True}"/>
-                        <field name='base'  attrs="{'readonly': True}"/>
-                        <field name='ala_2'  attrs="{'readonly': True}"/>
-                        <field name='grosor'  attrs="{'readonly': True}"/>
-                        <field name='longitud'  attrs="{'readonly': True}"/>
-                        <field name='alas'  attrs="{'readonly': True}"/>
-                        <field name='interior'  attrs="{'readonly': True}"/>
-                        <field name='peso'  attrs="{'readonly': True}"/>
-                        
-                        <field name='entrada_1'  attrs="{'readonly': True}"/>
-                        <field name='entrada_2'  attrs="{'readonly': True}"/>
-                        <field name='entrada_3'  attrs="{'readonly': True}"/>
-                        <field name='entrada_4'  attrs="{'readonly': True}"/>
-                        <field name='ala_3'  attrs="{'readonly': True}"/>
-                        <field name='ala_4'  attrs="{'readonly': True}"/>
-                        <field name='diametro'  attrs="{'readonly': True}"/>
-                        <field name='gramaje'  attrs="{'readonly': True}"/>
-                        <field name='pie'  attrs="{'readonly': True}"/>
-                    </group>
+            
+                <field name="categ_id" position="after">
+                    <field name="und_pallet"/>
+                    <field name="attribute_id"/>
+                    <field name="referencia_cliente_id"/>
+                    <field name="referencia_id"/>
+                </field>
 
-                </page>
-            </xpath>
             
         </field>
-    </record>-->
+    </record>
     
     
     <record id="view_product_category_form_eltete" model="ir.ui.view">
@@ -312,6 +294,7 @@
                     <field name="name"/>
                     <field name="description"/>
                     <field name="active"/>
+                    <field name="incremento"/>
                     <field name="tipo"/>
                     <field name="cantonera_1"/>
                     <field name="cantonera_2"/>
@@ -333,6 +316,7 @@
                             <field name="name"/>
                             <field name="description"/>
                             <field name="active"/>
+                            <field name="incremento"/>
                             <field name="tipo"/>
                             <field name="cantonera_1"/>
                             <field name="cantonera_2"/>
@@ -959,6 +943,80 @@
         
         <menuitem name="Papel calidad" parent="sale.prod_config_main" id="menu_product_caracteristica_papelcalidad" action="action_product_caracteristica_papelcalidad" sequence="29"/>
    
+   
+        <!-- #######################################################
+                 product.caracteristica.fsc
+        ######################################################## -->
+    
+    
+        <record model="ir.ui.view" id="view_product_caracteristica_fsc_tree">
+            <field name="name">product.caracteristica.fsc.tree</field>
+            <field name="model">product.caracteristica.fsc</field>
+            <field name="priority" eval="16"/>
+            <field name="arch" type="xml">
+                <tree string="Producto">
+                    <field name="number"/>
+                    <field name="name"/>
+                    <field name="description"/>
+                    <field name="active"/>
+                    <field name="incremento"/>
+                    <field name="tipo"/>
+                    <field name="cantonera_1"/>
+                    <field name="cantonera_2"/>
+                    <field name="cantonera_3"/>
+                    <field name="cantonera_4"/>
+                </tree>
+            </field>
+        </record>
+        
+        
+        <record model="ir.ui.view" id="view_product_caracteristica_fsc_form">
+            <field name="name">product.caracteristica.fsc.form</field>
+            <field name="model">product.caracteristica.fsc</field>
+            <field name="arch" type="xml">
+                <form string="Color">
+                    <sheet>
+                        <group>
+                            <field name="number"/>
+                            <field name="name"/>
+                            <field name="description"/>
+                            <field name="active"/>
+                            <field name="incremento"/>
+                            <field name="tipo"/>
+                            <field name="cantonera_1"/>
+                            <field name="cantonera_2"/>
+                            <field name="cantonera_3"/>
+                            <field name="cantonera_4"/>
+                        </group>
+                        
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        
+        
+        <record model="ir.ui.view" id="view_product_caracteristica_fsc_search">
+            <field name="name">product.caracteristica.fsc.search</field>
+            <field name="model">product.caracteristica.fsc</field>
+            <field name="arch" type="xml">
+                <search string="Color">
+                    <field name="number"/>
+                    <field name="name"/>
+                    <field name="description"/>
+                </search>
+            </field>
+        </record>
+
+				
+        <record model="ir.actions.act_window" id="action_product_caracteristica_fsc">
+            <field name="name">FSC</field>
+            <field name="res_model">product.caracteristica.fsc</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+        
+        
+        <menuitem name="FSC" parent="sale.prod_config_main" id="menu_product_caracteristica_fsc" action="action_product_caracteristica_fsc" sequence="30"/>
     
     
     
