--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -23,7 +23,7 @@
             <field name="arch" type="xml">
                 <form string="Ofertas">
                     <header>
-                        <button name="bor_to_ref" type="object" string="Comprobar referencia" states="BOR" />
+                        <button name="bor_to_ref" type="object" string="Guardar y continuar" states="BOR" />
                         <button name="ref_to_rcl" type="object" string="Guardar ref cliente" states="REF" />
                         <button name="cancel_offer" type="object" string="Cancelar" states="REF,RCL" />
                         <field name="state" widget="statusbar"/>
@@ -34,7 +34,7 @@
                             <field name="partner_id"/>
                             <field name="user_id"/>
                             <field name="date"/>
-                            <field name="type_id" domain="[('product_type','=',True)]"/>
+                            <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"/>
                             <field name="is_cantonera" invisible="1"/>
                             <field name="is_perfilu" invisible="1"/>
                             <field name="is_slipsheet" invisible="1"/>
@@ -57,8 +57,8 @@
                             <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
                             <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
                             <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
-                            <field name='ancho_interior'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
-                            <field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <!--<field name='ancho_interior'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>-->
                             <field name='peso_metro_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
                             <field name='metros_unidad_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
                         </group>
