--- a/views/sale_offer.xml
+++ b/views/sale_offer.xml
@@ -24,17 +24,19 @@
                 <form string="Ofertas">
                     <header>
                         <button name="bor_to_ref" type="object" string="Guardar y continuar" states="BOR" />
+						<button name="bor_to_rcl" type="object" string="Paso 1 y 2" states="BOR" />
                         <button name="ref_to_rcl" type="object" string="Guardar ref cliente" states="REF" />
-                        <button name="cancel_offer" type="object" string="Cancelar" states="REF,RCL" />
+                        <!--<button name="cancel_offer" type="object" string="Cancelar" states="REF,RCL" />-->
                         <field name="state" widget="statusbar"/>
                     </header>
                     <sheet>
                         <group>
-                            
+                            <field name="name" attrs="{'invisible': [('state', '!=', 'BOR')]}"/>
                             <field name="partner_id"/>
                             <field name="user_id"/>
                             <field name="date"/>
                             <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+							<field name="precio_cliente"/>
                             <field name="is_cantonera" invisible="1"/>
                             <field name="is_perfilu" invisible="1"/>
                             <field name="is_slipsheet" invisible="1"/>
@@ -50,7 +52,8 @@
                             <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
                             <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
                             <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
-                            <field name='grosor' attrs="{'invisible': ['|','|',('is_formato', '=', True),('is_bobina', '=', True),('is_pieballet', '=', True),]}" />
+                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
+                            <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
                             <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
                             <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
                             <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
@@ -61,6 +64,7 @@
                             <field name='ancho_superficie'  attrs="{'invisible': [('is_cantonera', '=', False)]}"/>-->
                             <field name='peso_metro_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
                             <field name='metros_unidad_user'  attrs="{'invisible': [('is_varios', '=', False)]}"/>
+							
                         </group>
                         
                         <group attrs="{'invisible': [('state', 'in', ['BOR',])]}">
@@ -74,7 +78,7 @@
                         <group attrs="{'invisible': [('state', 'in', ['BOR'])]}" >
                             <group>
                                 <h3 attrs="{'invisible': [('state', 'in', ['BOR'])]}">Referencia cliente</h3><br/>
-                                <field name="name"/>
+                                <field name="referencia_cliente_nombre"/>
 								<field name="pallet_especial_id"/>
 								<field name="paletizado_cliente" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
 								<field name="ancho_pallet_cliente" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_varios', '=', False),]}"/>
@@ -84,7 +88,7 @@
 								<field name="alto_max_cliente"/>
 								<field name="peso_max_cliente"/>
 								<field name="comentario_paletizado"/>
-								<field name="precio_cliente"/>
+								<field name="comentario_referencia"/>
 								
                             </group>
                             <group>
@@ -94,6 +98,8 @@
 								<field name="und_paquete"/>
 								<field name="paquetes_fila"/>
 								<field name="alto_fila"/>
+                                <field name="fila_max"/>
+                                <field name="fila_buena"/>
                             </group>
                         </group>
 						
@@ -120,6 +126,7 @@
                                 <field name='und_pallet' />
                                 <field name='state_id' />
                                 <field name='country_id' />
+                                <field name='titulo' />
                                 <field name='name' />
                             </tree>
                         </field>   
@@ -241,6 +248,7 @@
                                 <field name='state_id' />
                                 <field name='country_id' />
                                 <field name='name' />
+                                <field name='titulo' />
                             </tree>
                         </field>   
 
@@ -262,6 +270,8 @@
                     <field name='num_pallets' />
                     <field name='state_id' />
                     <field name='country_id' />
+                    <field name='titulo' />
+                    <field name='name' />
                 </tree>
             </field>
         </record>
@@ -298,6 +308,7 @@
                         <br/><br/><h3>CÁLCULOS OFERTA</h3>
                         <group>
                             <group>
+                                <field name='titulo' />
                                 <field name='name' />
                                 <field name='und_pallet' />
                                 <field name='peso_neto' />
